<resources>

    // General
    <string name="app_name">MaterialMensa</string>
    <string name="na">N/A</string>

    // About
    <string name="about_about">About</string>
    <string name="about_aboutText">MaterialMensa was developed by <a href="http://www.prttstft.de">Max Karadeniz</a>. A lot of tutorials and code snippets were used. Including from: <a href="http://www.youtube.com/slidenerd">Slidenerd</a>, <a href="http://www.enoent.fr/">enoent</a>, <a href="https://github.com/rcrosbourne">rcrosbourne</a>, and <a href="http://www.android4devs.com/">AndroidForDevs</a>. You can find the messy and barely commented source code on <a href="https://github.com/prttstft/MaterialMensa">Github</a>. With thanks to <a href="http://lucahammer.com/">Luca</a>, Robin, Schmanu.</string>
    <string name="about_icons" translatable="false">Icons</string>
    <string name="about_iconsText">Most of the icons were downloaded from </string>
    <string name="about_libraries">Open Source libraries used in this project:</string>
    <string name="about_librariesText" translatable="false"><a href="https://commons.apache.org/proper/commons-io/">Commons IO</a>\n<a href="https://developer.android.com/tools/support-library/features.html">Android Support Library: AppCompat</a>\n<a href="https://developer.android.com/tools/support-library/features.html">Android Support Library: RecyclerView</a>\n<a href="https://github.com/mcxiaoke/android-volley">Android-Volley</a>\n<a href="https://github.com/neokree/MaterialTabs">MaterialTabs</a>\n<a href="https://github.com/Pkmmte/CircularImageView">CircularImageView</a>\n<a href="https://github.com/evant/JobSchedulerCompat">JobSchedularCompat</a></string>
    <string name="about_api">API</string>
    <string name="about_apiText">API provided by <a href="http://www.studentenwerk-pb.de/gastronomie/rahmenbedingungen-fuer-speiseplan-nutzung/">Studentenwerk Paderborn</a>.</string>

    // Menu
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    // Navigation Drawer
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="navDrawerCategory">Student</string>

    // Items
    <string-array name="drawer_tabs">
        <item>Mensa Academica</item>
        <item>Mensa Forum</item>
        <item>Caféte</item>
        <item>Grill|Café</item>
        <item>Campus Döner</item>
        <item>One Way Snack</item>
        <item>Mensula</item>
    </string-array>

    // Tabs
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string-array name="tabs">
        <item>@string/today</item>
        <item>@string/tomorrow</item>
    </string-array>

    // Errors
    // Volley
    <string name="error_timeout">A network connection could not be established</string>
    <string name="error_auth_failure">A network connection could not be established</string>
    <string name="error_server">A network connection could not be established</string>
    <string name="error_network">A network connection could not be established</string>
    <string name="error_parse">Could not parse data</string>


    // Preferences
    // Strings
    <string name="CategoryGeneral">General</string>
    <string name="CategoryAllergensAdditives">Allergens &amp; Additives</string>
    <string name="Allergens">Allergens</string>
    <string name="Additives">Additives</string>
    <string name="PersonCategory">Person Category</string>
    <string name="Lifestyle">Lifestyle</string>
    <string name="DefaultPersonCategory">Set your person category in the preferences</string>
    <string name="DefaultLifestyle">Set your Lifestyle in the preferences</string>
    <string name="PersonCategorySummary">You can select your person category here to only display the relevant price.</string>
    <string name="LifestyleSummary">Select your lifestyle preference here.</string>
    <string name="AllergensSummary">Select the allergens filter here.</string>
    <string name="AdditivesSummary">Select your additives filter here.</string>
    <string name="DontSet">Not set</string>
    <string name="Student">Student</string>
    <string name="Staff">Staff</string>
    <string name="Guest">Guest</string>
    <string name="NoPreference">No Meal Preference</string>
    <string name="Vegetarian">Vegetarian</string>
    <string name="Vegan">Vegan</string>
    <string name="GlutenFree">Gluten Free</string>
    <string name="ReducedFat">Reduced Fat</string>
    <string name="ReducedCalories">Reduced Calories</string>

    // Arrays

    <string-array name="empty_array">

    </string-array>

    <string-array name="listPersonCategory">
        <item>@string/DontSet</item>
        <item>@string/Student</item>
        <item>@string/Staff</item>
        <item>@string/Guest</item>
    </string-array>

    <string-array name="listPersonCategoryValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="listLifestyle">
        <item>@string/NoPreference</item>
        <item>@string/Vegetarian</item>
        <item>@string/Vegan</item>
    </string-array>

    <string-array name="listLifestyleValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="listAllergens">
        <item>@string/gluten</item>
        <item>@string/crab</item>
        <item>@string/egg</item>
        <item>@string/fish</item>
        <item>@string/peanuts</item>
        <item>@string/soy</item>
        <item>@string/milk</item>
        <item>@string/nuts</item>
        <item>@string/celery</item>
        <item>@string/mustard</item>
        <item>@string/sesame</item>
        <item>@string/sulphites</item>
        <item>@string/lupins</item>
        <item>@string/molluscs</item>
    </string-array>

    <string-array name="listAllergensValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>

    <string-array name="listAdditives">
        <item>@string/dyes</item>
        <item>@string/preservatives</item>
        <item>@string/antioxidant</item>
        <item>@string/flavorenhancers</item>
        <item>@string/phosphate</item>
        <item>@string/sulphurised</item>
        <item>@string/waxed</item>
        <item>@string/blackend</item>
        <item>@string/sweeteners</item>
        <item>@string/phenylalanine</item>
        <item>@string/taurine</item>
        <item>@string/nitratesaltingmix</item>
        <item>@string/caffeine</item>
        <item>@string/quinine</item>
        <item>@string/milkprotein</item>
    </string-array>

    <string-array name="listAdditivesValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>


    <!-- AllergensAdditives & Additives -->
    <!-- Allergens -->
    <string name="gluten">Gluten [A1]</string>
    <string name="crab">Crustaceans and/or products thereof [A2]</string>
    <string name="egg">Eggs and/or products thereof [A3]</string>
    <string name="fish">Fish [A4]</string>
    <string name="peanuts">Peanuts and/or products thereof [A5]</string>
    <string name="soy">Soy and/or products thereof [A6]</string>
    <string name="milk">Milk and/or products thereof (including Lactose) [A7] </string>
    <string name="nuts">Nuts and/or products thereof [A8]</string>
    <string name="celery">Celery and/or products thereof [A9]</string>
    <string name="mustard">Mustard and/or products thereof [A10]</string>
    <string name="sesame">Sesame and/or products thereof [A11]</string>
    <string name="sulphites">Sulphur dioxide and Sulphites [A12]</string>
    <string name="lupins">Lupins and/or products thereof [A13]</string>
    <string name="molluscs">Molluscs and/or products thereof [A14]</string>

    <!-- Additives -->
    <string name="dyes">Colorings [1]</string>
    <string name="preservatives">Preservatives [2]</string>
    <string name="antioxidant">Antioxidants [3]</string>
    <string name="flavorenhancers">Flavor enhancers [4]</string>
    <string name="phosphate">Phosphate [5]</string>
    <string name="sulphurised">Sulphurised [6]</string>
    <string name="waxed">Waxed [7]</string>
    <string name="blackend">Blackend [8]</string>
    <string name="sweeteners">Sweeteners [9]</string>
    <string name="phenylalanine">Phenylalanine [10]</string>
    <string name="taurine">Taurin [11]</string>
    <string name="nitratesaltingmix">Nitrate Salting Mix [12]</string>
    <string name="caffeine">Caffeine [13]</string>
    <string name="quinine">Quinine [14]</string>
    <string name="milkprotein">Milk protein [15]</string>
    <string name="emptyMealListErrorMessage">This restaurant is closed.</string>


</resources>