<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/listPersonCategory"
        android:entryValues="@array/listPersonCategoryValues"
        android:key="prefPersonCategory"
        android:summary="@string/PersonCategorySummary"
        android:title="@string/PersonCategory" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/listLifestyle"
        android:entryValues="@array/listLifestyleValues"
        android:key="prefLifestyle"
        android:summary="@string/LifestyleSummary"
        android:title="@string/Lifestyle" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="prefLactoseFree"
        android:title="@string/LactoseIntolerant" />

</PreferenceScreen>