<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <!-- Toolbar -->
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <!-- Scrollable TextView -->
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:text="@string/about_about" />

            <TextView
                android:id="@+id/about_aboutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingBottom="15dp"
                android:text="@string/about_aboutText" />

            <TextView
                android:id="@+id/about_icons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:text="@string/about_icons" />

            <TextView
                android:id="@+id/about_iconsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingBottom="15dp"
                android:text="@string/about_iconsText" />

            <TextView
                android:id="@+id/about_libraries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:text="@string/about_libraries" />

            <TextView
                android:id="@+id/about_librariesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingBottom="15dp"
                android:text="@string/about_librariesText" />

            <TextView
                android:id="@+id/about_api"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:text="@string/about_api" />

            <TextView
                android:id="@+id/about_apiText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/about_apiText" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>